integrate done register supplier
